# sgos-backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alert_system.py  boards.py  carousel_gen.py  config.py  creators.py  cron_daily.py  database.py  firecrawl_scrape.py  fix_fts5.py  hybrid_search.py  idea_generation.py  main.py  observability.py  pyproject.toml  reddit_ingest.py  repurpose_engine.py  requirements.txt  scheduler.py  start.sh  topic_ingest.py  train_voice.py  transcribe.py  twitter_ingest.py  twitter_search_ingest.py  vector_search.py  viral_analytics.py  voice_profile.py  youtube_ingest.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  PIPELINE.md
models/: __init__.py  domain.py  requests.py  responses.py
repositories/: __init__.py  posts.py
routers/: __init__.py  alerts.py  analytics.py  boards.py  chat.py  content.py  creators.py  feedback.py  ingestion.py  media.py  pipeline.py  research.py  scrape.py  search.py  voice.py
scripts/: backup-cron.sh  backup.py
services/: __init__.py  boards.py  chat.py  content.py  creators.py  feedback.py  ingestion.py  research.py  search.py  voice.py
services/pipeline/: __init__.py  alerts.py  formatters.py  generator.py  genome.py  orchestrator.py  protocols.py  repository.py  scoring.py  voice_match.py
tests/: conftest.py  test_adaptive.py  test_api.py  test_formatters.py  test_load.py  test_pipeline.py
