[project]
name = "sgos-backend"
version = "0.1.0"
description = "StraughterG-OS Intelligence Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "openai>=2.43.0",
    "pyyaml>=6.0.3",
    "beautifulsoup4>=4.15.0",
    "python-multipart>=0.0.32",
    "faster-whisper>=1.2.1",
    "yt-dlp>=2026.6.9",
]
